--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
-spring.cloud.config.server.git.uri=file://.git
+spring.cloud.config.server.git.uri=file://C:/study/Master-Microservices/Microservices-with-Spring-Cloud/git-localconfig-repo
