--- a/limits-service/src/main/resources/bootstrap.properties
+++ b/limits-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 spring.application.name=limits-service
 spring.cloud.config.enabled=true
 spring.cloud.config.uri=http://localhost:8888
+spring.profiles.active=dev
