Configure JPA and Initialized Data

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -4,3 +4,16 @@ server.port=8000
 
 spring.cloud.config.uri=http://localhost:8888
 #sprin g.profiles.active=dev
+
+management.endpoints.web.exposure.include=*
+
+spring.datasource.url=jdbc:h2:mem:currency-db
+
+# create the table in h2 database during the compilation time
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
